Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4228

traffic_manager can hang in a tight read() loop

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.2, 6.2.0
    • Manager

    Description

      Under certain conditions, traffic_server does not seem to proxy the cop health check properly to the traffic_manager. Due to poor error handling in the manager thread, this can cause it to run indefinitely in a read() loop.

      I think we should strengthen the code in manager, to check FD with a poll() before every read and write, and allow it to fail after a certain timeout (based on Cop's behavior) such that at least we end up killing the request and manager thread.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: