TS-4228 Adds better error handling in the synthetic checks

In traffic_manager, the thread that handles the request from
traffic_cop (via traffic_server) does not deal well with various
(obscure) error conditions.

(cherry picked from commit 9bf5beb3625038ada8de89850d35dfc561220b77)